--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id("com.github.johnrengelman.shadow") version "7.1.2"
     id("io.micronaut.application") version "3.7.0"
     id("com.google.cloud.tools.jib") version "2.8.0"
+    id "org.sonarqube" version "3.5.0.2730"
 }
 
 version = "0.1"
@@ -57,6 +58,4 @@ micronaut {
         annotations("co.incubyte.*")
     }
 }
-
-
 
