Adds sonar project key and organization in the gradle file

--- a/build.gradle
+++ b/build.gradle
@@ -59,3 +59,9 @@ micronaut {
     }
 }
 
+sonarqube{
+    properties  {
+        property "sonar.projectName", "sapanparikh18_FeedbackKata"
+        property "sonar.organization", "sapanparikh18"
+    }
+}
