--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,7 +44,7 @@ jobs:
           SONAR_ORGANIZATION: sapanparikh18
         run: |
           export DOCKER_IMAGE=`echo "${DOCKER_REGISTRY_URL}/${DOCKER_REPOSITORY_PATH}/scromania" | sed -e 's#//#/#' -e 's#^/##'`
-          ./gradlew check sonar dockerPush --no-daemon --info
+          ./gradlew check sonar dockerPush --no-daemon --info -Dsonar.projectKey=sapanparikh18_FeedbackKata -Dsonar.organization=sapanparikh18
 
   sonarqube:
     runs-on: ubuntu-latest
