Chages Sonar Java Binaries path

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
 sonar.projectKey=sapanparikh18_FeedbackKata
 sonar.organization=sapanparikh18
 sonar.host.url=https://sonarcloud.io
-sonar.java.binaries=**/build/classes  
+sonar.java.binaries=build/classes  
