--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -4,15 +4,16 @@ on:
     workflows: [ "Java CI/CD" ]
     types:
       - completed
-k6_load_test:
-  name: k6 Load Test
-  runs-on: ubuntu-latest
+jobs:
+  k6_load_test:
+    name: k6 Load Test
+    runs-on: ubuntu-latest
 
-  steps:
-    - name: Checkout
-      uses: actions/checkout@v1
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
 
-    - name: Run local k6 test
-      uses: grafana/k6-action@v0.2.0
-      with:
-        filename: test.js
+      - name: Run local k6 test
+        uses: grafana/k6-action@v0.2.0
+        with:
+          filename: test.js
