Fixes load test path

--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -16,4 +16,4 @@ jobs:
       - name: Run local k6 test
         uses: grafana/k6-action@v0.2.0
         with:
-          filename: test.js
+          filename: src/loadTest/test.js
