Changes the pipeline to use K6 Cloud

--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -16,4 +16,6 @@ jobs:
       - name: Run local k6 test
         uses: grafana/k6-action@v0.2.0
         with:
+          cloud: true
           filename: src/loadTest/test.js
+          token: ${{ secrets.K6_CLOUD_API_TOKEN }}
