--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,8 +30,8 @@ jobs:
 #          path: ~/.sonar/cache
 #          key: ${{ runner.os }}-sonar
 #          restore-keys: ${{ runner.os }}-sonar
-#      - name: Build And Scan
-#        env:
+      - name: Build And Scan
+        env:
 ##        Sonar
 #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
 #          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -39,8 +39,8 @@ jobs:
 #          SONAR_PROJECT_KEY: sapanparikh18_FeedbackKata
 #          SONAR_ORGANIZATION: sapanparikh18
 #          AZUREMONITOR_INSTRUMENTATION_KEY: ${{secrets.AZUREMONITOR_INSTRUMENTATION_KEY}}
-#        run: |
-#          ./gradlew check build sonar --no-daemon --info -Dsonar.projectKey=sapanparikh18_FeedbackKata -Dsonar.organization=sapanparikh18
+        run: |
+          ./gradlew build --no-daemon --info -Dsonar.projectKey=sapanparikh18_FeedbackKata -Dsonar.organization=sapanparikh18
 #      # Triggering SonarQube analysis as results of it are required by Quality Gate check.
 #      - name: SonarQube Scan
 #        uses: sonarsource/sonarqube-scan-action@master
