Brings back build

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -31,7 +31,7 @@ jobs:
 #          key: ${{ runner.os }}-sonar
 #          restore-keys: ${{ runner.os }}-sonar
       - name: Build And Scan
-        env:
+#        env:
 ##        Sonar
 #          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
 #          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
