--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,5 +30,5 @@ jobs:
         if: always()
         with:
           files: |
-            test-results/**/*.xml
-            test-results/**/*.trx
+            **/test-results/**/*.xml
+            **/test-results/**/*.trx
