--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,4 @@ sonar.projectKey=sapanparikh18_FeedbackKata
 sonar.organization=sapanparikh18
 sonar.host.url=https://sonarcloud.io
 sonar.java.binaries=build/classes  
-sonar.exclusions=src/loadTest/*
+sonar.exclusions=src/loadTest/*,src/java/co/incubyte/Application.java
