Suppresses Sonar issue in the Application.java

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,4 +2,5 @@ sonar.projectKey=sapanparikh18_FeedbackKata
 sonar.organization=sapanparikh18
 sonar.host.url=https://sonarcloud.io
 sonar.java.binaries=build/classes  
-sonar.exclusions=src/loadTest/*,src/java/co/incubyte/Application.java
+sonar.exclusions=src/loadTest/*
+sonar.coverage.exclusions=src/java/co/incubyte/Application.java
