--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -40,7 +40,7 @@ jobs:
           SONAR_ORGANIZATION: sapanparikh18
           AZUREMONITOR_INSTRUMENTATION_KEY: ${secrets.AZUREMONITOR_INSTRUMENTATION_KEY}
         run: |
-          ./gradlew check build sonar --no-daemon --info -Dsonar.projectKey=sapanparikh18_FeedbackKata -Dsonar.organization=sapanparikh18
+          ./gradlew check build  --no-daemon --info -Dsonar.projectKey=sapanparikh18_FeedbackKata -Dsonar.organization=sapanparikh18
       # Triggering SonarQube analysis as results of it are required by Quality Gate check.
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
