--- a/build.gradle
+++ b/build.gradle
@@ -14,15 +14,18 @@ repositories {
 
 dependencies {
     annotationProcessor("io.micronaut:micronaut-http-validation")
+
     implementation("io.micronaut:micronaut-http-client")
     implementation("io.micronaut:micronaut-jackson-databind")
     implementation("io.micronaut:micronaut-management")
     implementation("io.micronaut.micrometer:micronaut-micrometer-core")
     implementation("io.micronaut.micrometer:micronaut-micrometer-registry-azure-monitor")
     implementation("jakarta.annotation:jakarta.annotation-api")
-    runtimeOnly("ch.qos.logback:logback-classic")
     implementation("io.micronaut:micronaut-validation")
     implementation 'com.microsoft.azure:applicationinsights-runtime-attach:3.4.9'
+
+    runtimeOnly 'com.microsoft.azure:applicationinsights-agent:3.4.9'
+    runtimeOnly("ch.qos.logback:logback-classic")
 }
 
 
@@ -36,7 +39,7 @@ java {
 
 tasks {
     dockerfile{
-        entryPoint("java", "-javaagent:/home/app/resources/applicationinsights-agent-3.4.9.jar", "-jar", "/home/app/application.jar")
+        entryPoint("java", "-javaagent:/home/app/libs/applicationinsights-agent-3.4.9.jar", "-jar", "/home/app/application.jar")
     }
     dockerBuild {
         images = ["${System.env.DOCKER_IMAGE ?: project.name}:$project.version"]
