--- a/build.gradle
+++ b/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     implementation("jakarta.annotation:jakarta.annotation-api")
     runtimeOnly("ch.qos.logback:logback-classic")
     implementation("io.micronaut:micronaut-validation")
-
+    testImplementation("org.assertj:assertj-core:3.23.1")
 }
 
 
