--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -2,6 +2,7 @@ name: Java CI
 on: [ push, pull_request ]
 jobs:
   build:
+    name: Build & Analyze
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
