--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -28,7 +28,7 @@ jobs:
           SONAR_ORGANIZATION: sapanparikh18
           AZUREMONITOR_INSTRUMENTATION_KEY: 96a6b51d-4026-406c-b492-b6ec81b3df91
         run: |
-          ./gradlew build sonar --no-daemon --info -Dsonar.projectKey=sapanparikh18_FeedbackKata -Dsonar.organization=sapanparikh18 -Dsonar.java.binaries=build/classes
+          ./gradlew build sonar --no-daemon --info -Dsonar.projectKey=sapanparikh18_FeedbackKata -Dsonar.organization=sapanparikh18
       # Triggering SonarQube analysis as results of it are required by Quality Gate check.
       - name: SonarQube Scan
         uses: sonarsource/sonarqube-scan-action@master
@@ -37,7 +37,7 @@ jobs:
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
           SONAR_PROJECT_KEY: sapanparikh18_FeedbackKata
           SONAR_ORGANIZATION: sapanparikh18
-
+          SONAR_JAVA_BINARIES: build/classes
       # Check the Quality Gate status.
       - name: SonarQube Quality Gate check
         id: sonarqube-quality-gate-check
