Step-3 force Sonar Error adds binary location

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,3 +4,5 @@ sonar.host.url=https://sonarcloud.io
 sonar.java.binaries=build/classes  
 sonar.exclusions=src/loadTest/*
 sonar.coverage.exclusions=src/java/co/incubyte/Application.java
+sonar.java.coveragePlugin=jacoco
+sonar.jacoco.reportPaths=build/reports/jacoco/test/jacocoTestReport.xml
