--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id("io.micronaut.application") version "3.7.0"
     id("com.google.cloud.tools.jib") version "2.8.0"
     id "org.sonarqube" version "3.5.0.2730"
+    id 'jacoco'
 }
 
 version = "0.1"
@@ -56,6 +57,11 @@ micronaut {
     processing {
         incremental(true)
         annotations("co.incubyte.*")
+    }
+}
+jacocoTestReport {
+    reports {
+        xml.enabled true
     }
 }
 
