--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,6 +3,6 @@ sonar.organization=sapanparikh18
 sonar.host.url=https://sonarcloud.io
 sonar.java.binaries=build/classes  
 sonar.exclusions=src/loadTest/*
-sonar.coverage.exclusions=src/java/co/incubyte/Application.java
+sonar.coverage.exclusions=src/main/java/co/incubyte/Application.java,src/test
 sonar.java.coveragePlugin=jacoco
 sonar.jacoco.reportPaths=build/reports/jacoco/test/jacocoTestReport.xml
